homelab/apps/storage/ceph/resources/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "storage"
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 7000
